feat: add endpoint to download specified file metadata
